Completed tester program. Added loops to add all form fields and HTTP headers. Added string manipulation to pull list of headers and form fields from properties file.

--- a/loadTestConfig.properties
+++ b/loadTestConfig.properties
@@ -4,8 +4,9 @@ run_count=
 thread_count=
 endpoint=
 
-# Separate items of the list with commas
+# Separate headers from their values with ':' and separate items of the list with commas
+# (ex. Accept:json,User-Agent:exampleValue
 header_list=
 
-# Separate each field of the form data with a comma
-form_post_data=
+# separate keys and values with ':' and entries with ',' (ex. first_name:john,last_name:smith)
+form_post_data=first_name:john,last_name:smith,email:johnsmith@test.com,address:360 Huntington Ave
