Updated request sending

--- a/loadTestConfig.properties
+++ b/loadTestConfig.properties
@@ -1,12 +1,13 @@
 
 
-run_count=
-thread_count=
-endpoint=
+run_count=1
+thread_count=105
+endpoint=http://localhost:8080/user
 
 # Separate headers from their values with ':' and separate items of the list with commas
 # (ex. Accept:json,User-Agent:exampleValue
-header_list=
+header_list=RequestType:ASync
 
 # separate keys and values with ':' and entries with ',' (ex. first_name:john,last_name:smith)
-form_post_data=first_name:john,last_name:smith,email:johnsmith@test.com,address:360 Huntington Ave
+#first_name:john,last_name:smith,email:johnsmith@test.com,address:360 Huntington Ave
+form_post_data=form:test
