Updated failure to connect output

--- a/loadTestConfig.properties
+++ b/loadTestConfig.properties
@@ -1,12 +1,12 @@
 
 
 run_count=1
-thread_count=105
+thread_count=1500
 endpoint=http://localhost:8080/user
 
 # Separate headers from their values with ':' and separate items of the list with commas
 # (ex. Accept:json,User-Agent:exampleValue
-header_list=RequestType:ASync
+header_list=
 
 # separate keys and values with ':' and entries with ',' (ex. first_name:john,last_name:smith)
 #first_name:john,last_name:smith,email:johnsmith@test.com,address:360 Huntington Ave
